// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a Colourway Carousel Component - EmptyDivider should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 0.64rem;
}

@media (max-width:1023px) {
  .c0 {
    margin-bottom: 2.125rem;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - NewInLabel should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #000000;
  color: #ffffff;
  font-size: 0.6875rem;
  font-weight: 500;
  left: 0;
  -webkit-letter-spacing: 0.0313rem;
  -moz-letter-spacing: 0.0313rem;
  -ms-letter-spacing: 0.0313rem;
  letter-spacing: 0.0313rem;
  padding: 0.125rem 0.375rem;
  position: absolute;
  text-transform: uppercase;
  top: 0;
  white-space: nowrap;
  z-index: 20;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 5.75rem;
  margin: 0rem;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  >
    Test
  </p>
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - SwiperContainer should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  overflow: hidden;
  width: 100%;
  padding-top: 150%;
  height: 0;
  position: relative;
  margin-bottom: 0.625rem;
}

.c0 .product-swiper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: auto;
}

.c0 .swiper-wrapper {
  height: auto;
}

@media (max-width:1023px) {
  .c0 {
    margin-bottom: 0.1875rem;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - ThumbImage should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  height: auto;
  width: 100%;
}

<img
    class="c0"
    src="test-url"
  />
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - ThumbImageWrapper should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 1.5rem;
  height: 0.5rem;
  cursor: pointer;
  overflow: hidden;
  z-index: 1;
}

<div
    class="c0"
  >
    <img
      alt="test"
      src="test"
    />
  </div>
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - ThumbsComponent should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - ThumbsContainer should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  overflow-x: auto;
  margin-bottom: 1.25rem;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c0::-webkit-scrollbar {
  display: none;
}

.c0 .swiper-container {
  min-width: 200px;
}

.c0 .swiper-scrollbar {
  background: none !important;
  height: 0.1875rem !important;
  left: 0 !important;
  bottom: 0 !important;
  width: 200px !important;
  z-index: 0 !important;
}

.c0 .thumb-scrollbar {
  background: #000000;
  height: 100%;
  min-width: 1.5rem;
}

.c0 + div.product-summary-favourites-container {
  bottom: 2.225rem;
}

@media (min-width:768px) {
  .c0 {
    max-width: 25rem;
  }
}

@media (min-width:894px) {
  .c0 {
    max-width: 30rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: none;
  }
}

<div
    class="c0"
    width="200"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - TileCardMedia When is supposed to position absolutely should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  height: auto;
  width: 100%;
  background: #d1d1d1;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: absolute;
  padding: 0rem;
  top: 0rem;
  display: inline-block;
  outline-offset: -0.125rem;
}

<a
    class="MuiCardMedia-root c0"
    href="ww.test.com"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - TileCardMedia should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  height: auto;
  width: 100%;
  background: #d1d1d1;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  padding: 0rem;
  top: 0rem;
  display: inline-block;
  outline-offset: -0.125rem;
}

<a
    class="MuiCardMedia-root c0"
    href="ww.test.com"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Given a Colourway Carousel Component - TileImage should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  height: auto;
  display: block;
}

<img
    alt="title text"
    class="c0"
    src="myimage.jpg"
  />
</DocumentFragment>
`;
